apps/skein_compiler/test/skein/conformance/negative/variable_call_not_fn.skein
-- expect: E0020, E0037
-- #293 (B4): calling a variable is legal only when it holds a function value
-- (`let g = &f` then `g()`). Calling an Int-typed binding is a structured
-- error, not a silent :unknown.
module VariableCallNotFn {
  fn f() -> Int {
    let n = 42
    n()
  }
}
